--- a/index.html
+++ b/index.html
@@ -16,190 +16,257 @@
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
-<!-- Inicio Topo -->
-	<header id="topo">
-		<nav id="topo-nav">
+	<div id="escurecer">
+	<!-- Inicio Topo -->
+		<header id="topo">
+			<nav id="topo-nav">
 
 
-			<div class="left-itens">
-					<a id="btn-mobile" href="">
-						<i class="fa-solid fa-bars fa-xl"></i>
+				<div class="left-itens">
+						<a id="btn-mobile" href="">
+							<i class="fa-solid fa-bars fa-xl"></i>
+						</a>
+					<ul id="side-bar">
+						<li>
+							<a id="sair" href="">
+								<i class="fa-solid fa-xmark fa-xl"></i>
+							</a>
+						</li>
+
+						<li  class="first-link">
+							<a href="">
+								<p>
+									MASCULINO
+								</p>
+							</a>
+						</li>
+
+						<li>
+							<a href="">
+								<p>
+									FEMININO
+								</p>
+							</a>
+						</li>
+					</ul>
+				</div>
+
+
+
+				<div class="logo">
+					<a href="index.html">
+						<span>NEW HERA</span>
 					</a>
-				<ul id="links">
-					<li>
-						<a id="sair" href="">
-							<i class="fa-solid fa-xmark fa-xl"></i>
+				</div>
+
+
+
+				<div class="right-itens">
+					<div id="area-usuario">
+						<a class="btn-usuario" href="#">
+							<i class="fa-regular fa-circle-user fa-xl"></i>
 						</a>
-					</li>
-
-					<li  class="first-link">
-						<a href="">
-							<p>
-								MASCULINO
-							</p>
+						<ul id="bar-list-active">
+							<li><a id="btn-popup" href="">Entrar/Cadastre-se</a></li>
+							<li><a href="">Meus pedidos</a></li>
+							<li><a href="">Lista de desejos</a></li>
+							<li><a href="">Mais serviços</a></li>
+						</ul>
+					</div>
+					<div class="area-usuario-celular">
+						<a class="btn-usuario" href="#">
+							<i class="fa-regular fa-circle-user fa-xl"></i>
 						</a>
-					</li>
+					</div>
+					<a class="btn-sacola" href="#">
+						<i class="fa-solid fa-bag-shopping fa-xl"></i>
+					</a>
+				</div>
+			</nav>
+		</header>
+	<!-- Fim Topo -->
 
-					<li>
-						<a href="">
-							<p>
-								FEMININO
-							</p>
-						</a>
-					</li>
-				</ul>
-			</div>
-
-
-
-			<div class="logo">
-				<a href="index.html">
-					<span>NEW HERA</span>
+		<div id="popup-login-cadastro">
+			<div class="topo-popup">
+				<h2>Entrar</h2>				
+				<a id="btn-sair-popup" href="">
+					<i class="fa-solid fa-xmark"></i>	
 				</a>
 			</div>
+			<div class="form">
+				<div class="formulario-popup">
+					<label for="email">
+						Email
+					</label>
+					<input type="text" id="email" placeholder="Digite seu E-mail">
+				</div>
+				<div class="formulario-popup">
+					<label for="password">
+						Senha
+					</label>
+					<input type="password" id="password" placeholder="Digite sua senha">
+				</div>
+				<div class="formulario-popup">
+					<input type="checkbox" id="remember-me">
+					<label for="remember-me">
+						Lembrar de mim
+					</label>
+				</div>
+				<div class="formulario-popup">
+					<button>Cadastrar-se</button>
+				</div>
+				<div class="formulario-popup">
+					<a style="font-family: 'Times New Roman', Serif;" href="">Esqueceu a sua senha?</a>
+				</div>
+			</div>
+		</div>
 
-
-
-			<div class="right-itens">
+	<!-- Inicio Apresentação -->
+		<section id="apresentacao-site">
+			<div class="imagens-apresentacao">
 				<a href="">
-					<i class="fa-solid fa-bag-shopping fa-xl"></i>
+				<img class="img-principal" src="imagens/apresentacao.png">
 				</a>
-				<a href="">
-					<i class="fa-regular fa-circle-user fa-xl"></i>
+			</div>
+			<div class="texto-apresentacao">
+				<h1>
+					classe e estilo
+				</h1>
+				<h1>
+					NEW HERA
+				</h1>
+				<p>
+					A moda não é feita apenas pra vestir, ela é fluida e representa o próprio ser.
+					por isso a New Hera não cobre apenas um estilo mas sim toda uma idêntidade pessoal. Seja você o tempo todo, seja New Hera.
+				</p>
+				<a class="btn-colecao" href="">Coleção Completa</a>
+			</div>
+		</section>
+	<!-- Fim Apresentação -->
+
+	<!-- Inicio Seção de compra -->
+
+	<section>
+		<div class="intro first-moda">
+			<h2>
+				Best Sellers Moda Masculina
+			</h2>
+		</div>
+
+		<div class="conteiner">
+			<div class="itens" data-anime="bottom">
+				<a href="itens-loja/moletom-cascavel-neon.html"><img src="imagens/foto1.jpg">
+				<p>
+				Moletom Cascavel Neon
+				</p>
+				<p>
+					R$ 249,99
+				</p>
+				</a>
+			</div>
+			<div class="itens" data-anime="bottom"> 
+				<a href=""><img src="imagens/foto2.jpg">
+				<p>
+				Sweater Marni
+				</p>
+				<p>
+					R$ 139,99
+				</p>
+				</a>
+			</div>
+			<div class="itens" data-anime="bottom">
+				<a href=""><img src="imagens/foto3.jpg">
+				<p>
+				Camisa Lanvin estampada edição Paris
+				</p>
+				<p>
+					R$ 79,99
+				</p>
+				</a>
+			</div>
+			<div class="itens" data-anime="bottom">
+				<a href=""><img src="imagens/foto4.jpg">
+				<p>
+				Short estampado verão
+				</p>
+				<p>
+					R$ 59,99
+				</p>
 				</a>
 			</div>
 
+		</div>
+		
+		<div class="intro">
+			<h2>
+				Best Sellers Moda Feminina
+			</h2>
+		</div>
 
-		</nav>
-	</header>
-<!-- Fim Topo -->
+		<div class="conteiner">
+			<div class="itens" data-anime="bottom">
+				<a href=""><img src="imagens/fem1.jpg">
+				<p>
+				Camiseta manga longa mesclada
+				</p>
+				<p>
+					R$ 74,99
+				</p>
+				</a>
+			</div>
+			<div class="itens" data-anime="bottom">
+				<a href=""><img src="imagens/fem2.jpg">
+				<p>
+				Vestido sem manga com padronagem
+				</p>
+				<p>
+					R$ 349,99
+				</p>
+				</a>
+			</div>
+			<div class="itens" data-anime="bottom">
+				<a href=""><img src="imagens/fem3.jpg">
+				<p>
+				Blusa Plumada sem manga
+				</p>
+				<p>
+					R$ 99,99
+				</p>
+				</a>
+			</div>
+			<div class="itens" data-anime="bottom">
+				<a href=""><img src="imagens/fem4.jpg">
+				<p>
+				Saia curta Plumada
+				</p>
+				<p>
+					R$ 99,99
+				</p>
+				</a>
+			</div>
+		</div>
+	</section>
 
-<!-- Inicio Apresentação -->
-	<section id="apresentacao-site">
-		<div class="imagens-apresentacao">
+<!--
+	<section>
+		<div class="img-nova-colecao">
 			<a href="">
-			<img class="img-principal" src="imagens/apresentacao.png">
+				<img src="imagens/apresentacao2.jpg">
 			</a>
 		</div>
 		<div class="texto-apresentacao">
-			<h1>
-				classe e estilo
-			</h1>
-			<h1>
-				NEW HERA
-			</h1>
+			<h2>
+				Nova Coleção Verão
+			</h2>
 			<p>
-				A moda não é feita apenas pra vestir, ela é fluida e representa o próprio ser.
-				por isso a New Hera não cobre apenas um estilo mas sim toda uma idêntidade pessoal. Seja você o tempo todo, seja New Hera.
+				doiapjsdipdjojsaiod dsoajdajdpa djsaojdpaj frpk´pfdklf´ksd´fdk´pfk
+				fmdpnmp ofdkfo ofkdop pfod´f pfdk´s ofjpasj
+				fkpaojfp foajkp jfoajp
 			</p>
-			<a class="btn-colecao" href="">Coleção Completa</a>
 		</div>
 	</section>
-<!-- Fim Apresentação -->
-
-<!-- Inicio Seção de compra -->
-
-<section>
-	<div class="intro first-moda">
-		<h2>
-			Best Sellers Moda Masculina
-		</h2>
+-->
 	</div>
-
-	<div class="conteiner">
-		<div class="itens" data-anime="bottom">
-			<a href=""><img src="imagens/foto1.jpg">
-			<p>
-			Moletom Cascavel Neon
-			</p>
-			<p>
-				R$ 249,99
-			</p>
-			</a>
-		</div>
-		<div class="itens" data-anime="bottom"> 
-			<a href=""><img src="imagens/foto2.jpg">
-			<p>
-			Sweater Marni
-			</p>
-			<p>
-				R$ 139,99
-			</p>
-			</a>
-		</div>
-		<div class="itens" data-anime="bottom">
-			<a href=""><img src="imagens/foto3.jpg">
-			<p>
-			Camisa Lanvin estampada edição Paris
-			</p>
-			<p>
-				R$ 79,99
-			</p>
-			</a>
-		</div>
-		<div class="itens" data-anime="bottom">
-			<a href=""><img src="imagens/foto4.jpg">
-			<p>
-			Short estampado verão
-			</p>
-			<p>
-				R$ 59,99
-			</p>
-			</a>
-		</div>
-
-	</div>
-	
-	<div class="intro">
-		<h2>
-			Best Sellers Moda Feminina
-		</h2>
-	</div>
-
-	<div class="conteiner">
-		<div class="itens" data-anime="bottom">
-			<a href=""><img src="imagens/fem1.jpg">
-			<p>
-			Camiseta manga longa mesclada
-			</p>
-			<p>
-				R$ 74,99
-			</p>
-			</a>
-		</div>
-		<div class="itens" data-anime="bottom">
-			<a href=""><img src="imagens/fem2.jpg">
-			<p>
-			Vestido sem manga com padronagem
-			</p>
-			<p>
-				R$ 349,99
-			</p>
-			</a>
-		</div>
-		<div class="itens" data-anime="bottom">
-			<a href=""><img src="imagens/fem3.jpg">
-			<p>
-			Blusa Plumada sem manga
-			</p>
-			<p>
-				R$ 99,99
-			</p>
-			</a>
-		</div>
-		<div class="itens" data-anime="bottom">
-			<a href=""><img src="imagens/fem4.jpg">
-			<p>
-			Saia curta Plumada
-			</p>
-			<p>
-				R$ 99,99
-			</p>
-			</a>
-		</div>
-	</div>
-</section>
-
 	<script src="https://kit.fontawesome.com/bd057bbf4d.js" crossorigin="anonymous"></script>
 	<script src="main.js"></script>
 </body>
