--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
 
 				<div class="left-itens">
-						<a id="btn-mobile" href="">
+						<a id="btn-mobile" href="#">
 							<i class="fa-solid fa-bars fa-xl"></i>
 						</a>
 					<ul id="side-bar">
 						<li>
-							<a id="sair" href="">
+							<a id="sair" href="#">
 								<i class="fa-solid fa-xmark fa-xl"></i>
 							</a>
 						</li>
@@ -116,7 +116,7 @@
 					<button>Cadastrar-se</button>
 				</div>
 				<div class="formulario-popup">
-					<a style="font-family: 'Times New Roman', Serif;" href="">Esqueceu a sua senha?</a>
+					<a style="font-family: 'Times New Roman', Serif;" href="#">Esqueceu a sua senha?</a>
 				</div>
 			</div>
 		</div>
