--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,17 +35,13 @@
 
 						<li  class="first-link">
 							<a href="">
-								<p>
 									MASCULINO
-								</p>
 							</a>
 						</li>
 
 						<li>
 							<a href="">
-								<p>
 									FEMININO
-								</p>
 							</a>
 						</li>
 					</ul>
@@ -78,14 +74,25 @@
 							<i class="fa-regular fa-circle-user fa-xl"></i>
 						</a>
 					</div>
-					<a class="btn-sacola" href="#">
-						<i class="fa-solid fa-bag-shopping fa-xl"></i>
-					</a>
+					<div id="area-sacola">
+						<a class="btn-sacola" href="#">
+							<i class="fa-solid fa-bag-shopping fa-xl"></i>
+						</a>
+						<div id="area-sacola-active">
+							
+						</div>
+					</div>
+					<div class="area-sacola-celular">
+						<a class="btn-sacola" href="#">
+							<i class="fa-solid fa-bag-shopping fa-xl"></i>
+						</a>
+					</div>
 				</div>
 			</nav>
 		</header>
 	<!-- Fim Topo -->
 
+		<!-- Inicio PopUp de Login -->
 		<div id="popup-login-cadastro">
 			<div class="topo-popup">
 				<h2>Entrar</h2>				
@@ -120,6 +127,7 @@
 				</div>
 			</div>
 		</div>
+		<!-- Fim PopUp de Login -->
 
 	<!-- Inicio Apresentação -->
 		<section id="apresentacao-site">
@@ -153,7 +161,7 @@
 			</h2>
 		</div>
 
-		<div class="conteiner">
+		<div id="best-sellerM">
 			<div class="itens" data-anime="bottom">
 				<a href="itens-loja/moletom-cascavel-neon.html"><img src="imagens/foto1.jpg">
 				<p>
@@ -163,6 +171,7 @@
 					R$ 249,99
 				</p>
 				</a>
+				<a class="btn-add-carrinho" href=""><i class="fa-solid fa-plus"></i> Carrinho</a>
 			</div>
 			<div class="itens" data-anime="bottom"> 
 				<a href=""><img src="imagens/foto2.jpg">
@@ -173,16 +182,18 @@
 					R$ 139,99
 				</p>
 				</a>
+				<a class="btn-add-carrinho" href=""><i class="fa-solid fa-plus"></i> Carrinho</a>
 			</div>
 			<div class="itens" data-anime="bottom">
 				<a href=""><img src="imagens/foto3.jpg">
 				<p>
-				Camisa Lanvin estampada edição Paris
+				Camisa Lanvin estampada
 				</p>
 				<p>
 					R$ 79,99
 				</p>
 				</a>
+				<a class="btn-add-carrinho" href=""><i class="fa-solid fa-plus"></i> Carrinho</a>
 			</div>
 			<div class="itens" data-anime="bottom">
 				<a href=""><img src="imagens/foto4.jpg">
@@ -193,8 +204,8 @@
 					R$ 59,99
 				</p>
 				</a>
+				<a class="btn-add-carrinho" href=""><i class="fa-solid fa-plus"></i> Carrinho</a>
 			</div>
-
 		</div>
 		
 		<div class="intro">
@@ -203,26 +214,28 @@
 			</h2>
 		</div>
 
-		<div class="conteiner">
+		<div id="best-sellerF">
 			<div class="itens" data-anime="bottom">
 				<a href=""><img src="imagens/fem1.jpg">
 				<p>
-				Camiseta manga longa mesclada
+				Camiseta manga longa
 				</p>
 				<p>
 					R$ 74,99
 				</p>
 				</a>
+				<a class="btn-add-carrinho" href=""><i class="fa-solid fa-plus"></i> Carrinho</a>
 			</div>
 			<div class="itens" data-anime="bottom">
 				<a href=""><img src="imagens/fem2.jpg">
 				<p>
-				Vestido sem manga com padronagem
+				Vestido sem manga
 				</p>
 				<p>
 					R$ 349,99
 				</p>
 				</a>
+				<a class="btn-add-carrinho" href=""><i class="fa-solid fa-plus"></i> Carrinho</a>
 			</div>
 			<div class="itens" data-anime="bottom">
 				<a href=""><img src="imagens/fem3.jpg">
@@ -233,6 +246,7 @@
 					R$ 99,99
 				</p>
 				</a>
+				<a class="btn-add-carrinho" href=""><i class="fa-solid fa-plus"></i> Carrinho</a>
 			</div>
 			<div class="itens" data-anime="bottom">
 				<a href=""><img src="imagens/fem4.jpg">
@@ -243,29 +257,10 @@
 					R$ 99,99
 				</p>
 				</a>
+				<a class="btn-add-carrinho" href=""><i class="fa-solid fa-plus"></i> Carrinho</a>
 			</div>
 		</div>
 	</section>
-
-<!--
-	<section>
-		<div class="img-nova-colecao">
-			<a href="">
-				<img src="imagens/apresentacao2.jpg">
-			</a>
-		</div>
-		<div class="texto-apresentacao">
-			<h2>
-				Nova Coleção Verão
-			</h2>
-			<p>
-				doiapjsdipdjojsaiod dsoajdajdpa djsaojdpaj frpk´pfdklf´ksd´fdk´pfk
-				fmdpnmp ofdkfo ofkdop pfod´f pfdk´s ofjpasj
-				fkpaojfp foajkp jfoajp
-			</p>
-		</div>
-	</section>
--->
 	</div>
 	<script src="https://kit.fontawesome.com/bd057bbf4d.js" crossorigin="anonymous"></script>
 	<script src="main.js"></script>
