--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						</ul>
 					</div>
 					<div class="area-usuario-celular">
-						<a class="btn-usuario" href="#">
+						<a class="btn-usuario" href="login-celular.html">
 							<i class="fa-regular fa-circle-user fa-xl"></i>
 						</a>
 					</div>
@@ -120,10 +120,16 @@
 					</label>
 				</div>
 				<div class="formulario-popup">
-					<button>Cadastrar-se</button>
+					<button>Entrar</button>
 				</div>
 				<div class="formulario-popup">
 					<a style="font-family: 'Times New Roman', Serif;" href="#">Esqueceu a sua senha?</a>
+				</div>
+				<hr>
+				<div class="formulario-popup">
+					<a href="cadastro.html">
+						<button class="cadastrar">cadastrar-se</button>
+					</a>
 				</div>
 			</div>
 		</div>
@@ -163,7 +169,7 @@
 
 		<div id="best-sellerM">
 			<div class="itens" data-anime="bottom">
-				<a href="itens-loja/moletom-cascavel-neon.html"><img src="imagens/foto1.jpg">
+				<a href="itens-loja/moletom-cascavel-neon.html"><img class="img-item" src="imagens/foto1.jpg">
 				<p>
 				Moletom Cascavel Neon
 				</p>
@@ -174,7 +180,7 @@
 				<a class="btn-add-carrinho" href=""><i class="fa-solid fa-plus"></i> Carrinho</a>
 			</div>
 			<div class="itens" data-anime="bottom"> 
-				<a href=""><img src="imagens/foto2.jpg">
+				<a href=""><img class="img-item"  src="imagens/foto2.jpg">
 				<p>
 				Sweater Marni
 				</p>
@@ -185,7 +191,7 @@
 				<a class="btn-add-carrinho" href=""><i class="fa-solid fa-plus"></i> Carrinho</a>
 			</div>
 			<div class="itens" data-anime="bottom">
-				<a href=""><img src="imagens/foto3.jpg">
+				<a href=""><img class="img-item"  src="imagens/foto3.jpg">
 				<p>
 				Camisa Lanvin estampada
 				</p>
@@ -196,7 +202,7 @@
 				<a class="btn-add-carrinho" href=""><i class="fa-solid fa-plus"></i> Carrinho</a>
 			</div>
 			<div class="itens" data-anime="bottom">
-				<a href=""><img src="imagens/foto4.jpg">
+				<a href=""><img class="img-item"  src="imagens/foto4.jpg">
 				<p>
 				Short estampado verão
 				</p>
@@ -216,7 +222,7 @@
 
 		<div id="best-sellerF">
 			<div class="itens" data-anime="bottom">
-				<a href=""><img src="imagens/fem1.jpg">
+				<a href=""><img class="img-item"  src="imagens/fem1.jpg">
 				<p>
 				Camiseta manga longa
 				</p>
@@ -227,7 +233,7 @@
 				<a class="btn-add-carrinho" href=""><i class="fa-solid fa-plus"></i> Carrinho</a>
 			</div>
 			<div class="itens" data-anime="bottom">
-				<a href=""><img src="imagens/fem2.jpg">
+				<a href=""><img class="img-item"  src="imagens/fem2.jpg">
 				<p>
 				Vestido sem manga
 				</p>
@@ -238,7 +244,7 @@
 				<a class="btn-add-carrinho" href=""><i class="fa-solid fa-plus"></i> Carrinho</a>
 			</div>
 			<div class="itens" data-anime="bottom">
-				<a href=""><img src="imagens/fem3.jpg">
+				<a href=""><img class="img-item"  src="imagens/fem3.jpg">
 				<p>
 				Blusa Plumada sem manga
 				</p>
@@ -249,7 +255,7 @@
 				<a class="btn-add-carrinho" href=""><i class="fa-solid fa-plus"></i> Carrinho</a>
 			</div>
 			<div class="itens" data-anime="bottom">
-				<a href=""><img src="imagens/fem4.jpg">
+				<a href=""><img class="img-item"  src="imagens/fem4.jpg">
 				<p>
 				Saia curta Plumada
 				</p>
