--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<a class="btn-usuario" href="#">
 							<i class="fa-regular fa-circle-user fa-xl"></i>
 						</a>
-						<ul id="bar-list-active">
+						<ul id="area-usuario-active">
 							<li><a id="btn-popup" href="">Entrar/Cadastre-se</a></li>
 							<li><a href="">Meus pedidos</a></li>
 							<li><a href="">Lista de desejos</a></li>
@@ -122,7 +122,7 @@
 					</label>
 				</div>
 				<div class="formulario-popup">
-					<button>Entrar</button>
+					<button type="submit">Entrar</button>
 				</div>
 				<div class="formulario-popup">
 					<a style="font-family: 'Times New Roman', Serif;" href="#">Esqueceu a sua senha?</a>
@@ -130,7 +130,7 @@
 				<hr>
 				<div class="formulario-popup">
 					<a href="cadastro.html">
-						<button class="cadastrar">Cadastrar-se</button>
+						<button type="submit" class="cadastrar">Cadastrar-se</button>
 					</a>
 				</div>
 			</div>
