--- a/cadastro.html
+++ b/cadastro.html
@@ -63,7 +63,7 @@
 						<a class="btn-usuario" href="#">
 							<i class="fa-regular fa-circle-user fa-xl"></i>
 						</a>
-						<ul id="bar-list-active">
+						<ul id="area-usuario-active">
 							<li><a id="btn-popup" href="">Entrar/Cadastre-se</a></li>
 							<li><a href="">Meus pedidos</a></li>
 							<li><a href="">Lista de desejos</a></li>
@@ -80,7 +80,9 @@
 							<i class="fa-solid fa-bag-shopping fa-xl"></i>
 						</a>
 						<div id="area-sacola-active">
-							
+							<div class="div-sacola">
+        						<img style="height: 99; width: 200px;" src="../imagens/vazia.png">
+        					</div>
 						</div>
 					</div>
 					<div class="area-sacola-celular">
