--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 					A moda não é feita apenas pra vestir, ela é fluida e representa o próprio ser.
 					por isso a New Hera não cobre apenas um estilo mas sim toda uma idêntidade pessoal. Seja você o tempo todo, seja New Hera.
 				</p>
-				<a class="btn-colecao" href="">Coleção Completa</a>
+				<a class="btn-colecao" href="colecao-completa.html">Coleção Completa</a>
 			</div>
 		</section>
 	<!-- Fim Apresentação -->
@@ -183,6 +183,11 @@
 
 		</div>
 	</section>
+
+	<footer id="rodape"> 
+
+	</footer>
+	
 	</div>
 	<script src="https://kit.fontawesome.com/bd057bbf4d.js" crossorigin="anonymous"></script>
 	<script src="../js/itensloja.js"></script>
