--- a/cadastro.html
+++ b/cadastro.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Cadastro - New Hera</title>
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
-	<link rel="stylesheet" type="text/css" href="../css/login-celular-style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/login-celular-style.css">
 
 	<!-- Link pro google fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -81,7 +81,7 @@
 						</a>
 						<div id="area-sacola-active">
 							<div class="div-sacola">
-        						<img style="height: 99; width: 200px;" src="../imagens/vazia.png">
+        						<img style="height: 99; width: 200px;" src="imagens/vazia.png">
         					</div>
 						</div>
 					</div>
@@ -233,6 +233,6 @@
 	</section>
 
 	<script src="https://kit.fontawesome.com/bd057bbf4d.js" crossorigin="anonymous"></script>
-	<script src="../js/exibicao.js"></script>
+	<script src="js/exibicao.js"></script>
 </body>
 </html>
