--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>New Hera - Store</title>
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<!-- Link pro google fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -80,7 +80,7 @@
 						</a>
 						<div id="area-sacola-active">
 							<div class="div-sacola">
-        						<img style="height: 99; width: 200px;" src="../imagens/vazia.png">
+        						<img style="height: 99; width: 200px;" src="imagens/vazia.png">
         					</div>
 						</div>
 					</div>
@@ -141,7 +141,7 @@
 		<section id="apresentacao-site">
 			<div class="imagens-apresentacao">
 				<a href="">
-				<img class="img-principal" src="../imagens/apresentacao.png">
+				<img class="img-principal" src="imagens/apresentacao.png">
 				</a>
 			</div>
 			<div class="texto-apresentacao">
@@ -190,7 +190,7 @@
 	
 	</div>
 	<script src="https://kit.fontawesome.com/bd057bbf4d.js" crossorigin="anonymous"></script>
-	<script src="../js/itensloja.js"></script>
-	<script src="../js/exibicao.js"></script>
+	<script src="js/itensloja.js"></script>
+	<script src="js/exibicao.js"></script>
 </body>
 </html>
