--- a/colecao-completa.html
+++ b/colecao-completa.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>New Hera - Store</title>
-	<link rel="stylesheet" type="text/css" href="../css/style-colecao.css">
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style-colecao.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<!-- Link pro google fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -80,7 +80,7 @@
 						</a>
 						<div id="area-sacola-active">
 							<div class="div-sacola">
-        						<img style="height: 99; width: 200px;" src="../imagens/vazia.png">
+        						<img style="height: 99; width: 200px;" src="imagens/vazia.png">
         					</div>
 						</div>
 					</div>
@@ -148,16 +148,16 @@
 
 				<!-- imagens do slide -->
 				<div class="slide first">
-					<img src="../imagens/slider-colecao-3.webp">
+					<img src="imagens/slider-colecao-3.webp">
 				</div>
 				<div class="slide">
-					<img src="../imagens/slider-colecao-4.jpg">
+					<img src="imagens/slider-colecao-4.jpg">
 				</div>
 				<div class="slide">
-					<img src="../imagens/slider-colecao-2.jpg">
+					<img src="imagens/slider-colecao-2.jpg">
 				</div>
 				<div class="slide">
-					<img src="../imagens/slider-colecao-1.webp">
+					<img src="imagens/slider-colecao-1.webp">
 				</div>
 				<!-- fim igamens do slide -->
 
@@ -179,7 +179,7 @@
 				<div class="escolha-item">
 					<a href="">
 						<div class="escolha-img">
-							<img src="../imagens/img-escolha-camisa.webp">
+							<img src="imagens/img-escolha-camisa.webp">
 						</div>
 						<div class="escolha-texto">
 							<p>
@@ -192,7 +192,7 @@
 				<div class="escolha-item">
 					<a href="">
 						<div class="escolha-img">
-							<img src="../imagens/img-escolha-short.webp">
+							<img src="imagens/img-escolha-short.webp">
 						</div>
 						<div class="escolha-texto">
 							<p>
@@ -205,7 +205,7 @@
 				<div class="escolha-item">
 					<a href="">
 						<div class="escolha-img">
-							<img src="../imagens/img-escolha-calca.webp">
+							<img src="imagens/img-escolha-calca.webp">
 						</div>
 						<div class="escolha-texto">
 							<p>
@@ -217,7 +217,7 @@
 				<div class="escolha-item">
 					<a href="">
 						<div class="escolha-img">
-							<img src="../imagens/img-escolha-esportivo.webp">
+							<img src="imagens/img-escolha-esportivo.webp">
 						</div>
 						<div class="escolha-texto">
 							<p>
@@ -230,7 +230,7 @@
 				<div class="escolha-item">
 					<a href="">
 						<div class="escolha-img">
-							<img src="../imagens/img-escolha-social.webp">
+							<img src="imagens/img-escolha-social.webp">
 						</div>
 						<div class="escolha-texto">
 							<p>
@@ -244,7 +244,7 @@
 				<div class="escolha-item">
 					<a href="">
 						<div class="escolha-img">
-							<img src="../imagens/img-escolha-agasalho.webp">
+							<img src="imagens/img-escolha-agasalho.webp">
 						</div>
 						<div class="escolha-texto">
 							<p>
@@ -263,7 +263,7 @@
 				<div class="escolha-item">
 					<a href="">
 						<div class="escolha-img">
-							<img src="../imagens/img-escolha-top.webp">
+							<img src="imagens/img-escolha-top.webp">
 						</div>
 						<div class="escolha-texto">
 							<p>
@@ -276,7 +276,7 @@
 				<div class="escolha-item">
 					<a href="">
 						<div class="escolha-img">
-							<img src="../imagens/img-escolha-shortF.webp">
+							<img src="imagens/img-escolha-shortF.webp">
 						</div>
 						<div class="escolha-texto">
 							<p>
@@ -289,7 +289,7 @@
 				<div class="escolha-item">
 					<a href="">
 						<div class="escolha-img">
-							<img src="../imagens/img-escolha-calcaF.webp">
+							<img src="imagens/img-escolha-calcaF.webp">
 						</div>
 						<div class="escolha-texto">
 							<p>
@@ -302,7 +302,7 @@
 				<div class="escolha-item">
 					<a href="">
 						<div class="escolha-img">
-							<img src="../imagens/img-escolha-vestido.webp">
+							<img src="imagens/img-escolha-vestido.webp">
 						</div>
 						<div class="escolha-texto">
 							<p>
@@ -315,7 +315,7 @@
 				<div class="escolha-item">
 					<a href="">
 						<div class="escolha-img">
-							<img src="../imagens/img-escolha-socialF.webp">
+							<img src="imagens/img-escolha-socialF.webp">
 						</div>
 						<div class="escolha-texto">
 							<p>
@@ -329,7 +329,7 @@
 				<div class="escolha-item">
 					<a href="">
 						<div class="escolha-img">
-							<img src="../imagens/img-escolha-agasalhoF.webp">
+							<img src="imagens/img-escolha-agasalhoF.webp">
 						</div>
 						<div class="escolha-texto">
 							<p>
@@ -358,7 +358,7 @@
 			</div>
 		</footer>
 	<script src="https://kit.fontawesome.com/bd057bbf4d.js" crossorigin="anonymous"></script>
-	<script src="../js/CC.js"></script>
-	<script src="../js/exibicao.js"></script>
+	<script src="js/CC.js"></script>
+	<script src="js/exibicao.js"></script>
 </body>
 </html>
