--- a/login-celular.html
+++ b/login-celular.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Entrar/Cadastrar-se - New Hera</title>
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
-	<link rel="stylesheet" type="text/css" href="../css/login-celular-style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/login-celular-style.css">
 
 	<!-- Link pro google fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -130,6 +130,6 @@
 	</section>
 
 	<script src="https://kit.fontawesome.com/bd057bbf4d.js" crossorigin="anonymous"></script>
-	<script src="../js/exibicao.js"></script>
+	<script src="js/exibicao.js"></script>
 </body>
 </html>
