--- a/colecao-completa.html
+++ b/colecao-completa.html
@@ -4,8 +4,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>New Hera - Store</title>
+
+	<!-- Link para CSS -->
 	<link rel="stylesheet" type="text/css" href="css/style-colecao.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<!-- Link para CSS -->
+
+	<!-- Link para Javascript -->
+	<script src="https://kit.fontawesome.com/bd057bbf4d.js" crossorigin="anonymous"></script>
+	<script src="js/colecao-completa.js" defer></script>
+	<script src="js/exibicao.js" defer></script>
+	<!-- Link para Javascript -->
 
 	<!-- Link pro google fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,6 +24,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
+	<!-- Link pro google fonts -->
 </head>
 <body>
 	<!-- Inicio Topo -->
@@ -159,7 +169,7 @@
 				<div class="slide">
 					<img src="imagens/slider-colecao-1.webp">
 				</div>
-				<!-- fim igamens do slide -->
+				<!-- fim imagens do slide -->
 
 				<div class="manual-navigation-arrow-left">
 					<i class="fa-solid fa-angle-left"></i>
@@ -173,6 +183,8 @@
 			
 		</section>
 
+
+		<!-- Inicio do menu de escolha por tipo de roupa-->
 		<section id="escolha-tipo">
 			<div class="container-escolha">
 				
@@ -211,7 +223,8 @@
 							<p>
 								Calça
 							</p>
-						</div>					</a>
+						</div>					
+					</a>
 				</div>
 
 				<div class="escolha-item">
@@ -338,10 +351,10 @@
 						</div>
 					</a>	
 				</div>
-
-
 			</div>
 		</section>
+		<!-- Fim do menu de escolha por tipo de roupa-->
+
 
 		<div class="intro first-moda">
 			<h2>
@@ -352,13 +365,12 @@
 			<!-- Aqui são criados os itens em exibição de venda -->
 		</section>
 
+		<!-- Inicio Rodapé -->
 		<footer id="rodape"> 
 			<div class="conteudo-rodape">
 				
 			</div>
 		</footer>
-	<script src="https://kit.fontawesome.com/bd057bbf4d.js" crossorigin="anonymous"></script>
-	<script src="js/CC.js"></script>
-	<script src="js/exibicao.js"></script>
+		<!-- Fim Rodapé -->
 </body>
 </html>
