--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>New Hera - Store</title>
+	
+	<!-- Link para CSS -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<!-- Link para CSS -->
+
+	<!-- Link para Javascript -->
+	<script src="https://kit.fontawesome.com/bd057bbf4d.js" crossorigin="anonymous" defer></script>
+	<script src="js/index.js" defer></script>
+	<script src="js/exibicao.js" defer></script>
+	<!-- Link para Javascript -->
 
 	<!-- Link pro google fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +23,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
+	<!-- Link pro google fonts -->
 </head>
 <body>
 	<div id="escurecer">
@@ -34,13 +44,13 @@
 						</li>
 
 						<li  class="first-link">
-							<a href="">
+							<a href="colecao-completa.html">
 									MASCULINO
 							</a>
 						</li>
 
 						<li>
-							<a href="">
+							<a href="colecao-completa.html">
 									FEMININO
 							</a>
 						</li>
@@ -170,7 +180,7 @@
 		</div>
 
 		<div id="best-sellerM">
-
+			<!-- Aqui são criados os itens em exibição de venda -->
 		</div>
 		
 		<div class="intro">
@@ -180,17 +190,17 @@
 		</div>
 
 		<div id="best-sellerF">
-
+			<!-- Aqui são criados os itens em exibição de venda -->
 		</div>
 	</section>
 
+
+	<!-- Inicio Rodapé -->
 	<footer id="rodape"> 
 
 	</footer>
+	<!-- Fim Rodapé -->
 	
 	</div>
-	<script src="https://kit.fontawesome.com/bd057bbf4d.js" crossorigin="anonymous"></script>
-	<script src="js/itensloja.js"></script>
-	<script src="js/exibicao.js"></script>
 </body>
 </html>
